# bd

./: AUTHORS  ChangeLog  Makefile.am  combat.ppm  configure.ac
src/: Makefile.am  build_tree.cc  build_tree.hh  convo.cc  convo.hh  gray.cc  gray.hh  main.cc  tree.cc  tree.hh  tree_misc.cc  tree_misc.hh
src/core/: Makefile.am  image.hh  image.hxx  load_pgm.cc  load_pgm.hh  load_ppm.cc  load_ppm.hh  save_pgm.hh  save_pgm.hxx  save_ppm.hh  save_ppm.hxx  squeletize.cc  squeletize.hh
